# min2phaseCXX

./: .gitignore  Algorithm.md  Benchmarks.md  CMakeLists.txt  README.md  benchmark.cpp  example.cpp  include.h  main.cpp  makefile  tests.cpp
examples/: benchmark.cpp  example.cpp  tests.cpp
include/min2phase/: Tools.h  min2phase.h  tools.h
src/: Coords.cpp  Coords.h  CubeInfo.cpp  CubeInfo.h  CubieCube.cpp  CubieCube.h  Search.cpp  Search.h  Tools.cpp  coords.cpp  coords.h  info.cpp  info.h  min2phase.cpp  tests.cpp  tests.h  tools.cpp
